added new explorations

--- a/normalization/caloric_normalization.ipynb
+++ b/normalization/caloric_normalization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,12 +133,12 @@
     "'Barley': 332,\n",
     "'Millet': 340,\n",
     "'Sorghum': 343\n",
-    "}\n"
+    "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -257,13 +257,33 @@
        "4  Import Quantity  2014    tonnes   16.0      360  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(32,)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df.Element=='Import Value'].groupby('Year').sum()['caloric'].shape"
    ]
   },
   {
@@ -308,16 +328,18 @@
    "outputs": [],
    "source": [
     "def get_norm_df(df,norm_function,name_norm):\n",
-    "    \"\"\"Return dataframe of antifragility normalized with respect to a certain normalization\n",
-    "    function (norm_function) and name_norm is parameter to specify the normalization name. Examples:\n",
+    "    \"\"\"Return dataframe of antifragility per year normalized with respect to a certain normalization\n",
+    "    function (norm_function) and name_norm is a parameter to specify the normalization name. Examples:\n",
     "    \n",
     "    name_norm='distance'\n",
     "    name_norm='caloric'\n",
-    "    \n",
     "    \"\"\"\n",
     "\n",
     "    def nrml(a):    # Normalize in [0,1]\n",
     "        return (a - a.min()) / (a.max() - a.min())\n",
+    "    \n",
+    "    def nrml_(a):   # Normalize in [-1,1]\n",
+    "        return 2*(a - a.min()) / (a.max() - a.min()) -1\n",
     "    \n",
     "    # create a dictionary with global amount of trade\n",
     "        # quantity = Total imports \n",
@@ -436,10 +458,6 @@
     "                    for k, v in val.items():\n",
     "                        dict_country[x][year]['imp_'+key+'_'+k] = v\n",
     "        year += 1\n",
-    "        \n",
-    "    def nrml_(a):   # Normalize in [-1,1]\n",
-    "        return 2*(a - a.min()) / (a.max() - a.min()) -1\n",
-    "    \n",
     "\n",
     "    for key, val in dict_country.items():\n",
     "        xxx = pd.DataFrame(val).transpose()\n",
@@ -522,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
