--- a/normalization/normalization.ipynb
+++ b/normalization/normalization.ipynb
@@ -1595,7 +1595,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "187"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trade_df = pd.read_csv(\"../united_names_datasets/tradeMatrix_PWG.csv\")\n",
+    "gdp_countries=gdp_df['country.value'].unique()\n",
+    "trade_countries=trade_df['exporter'].unique()\n",
+    "intersc=set(trade_countries).intersection(gdp_countries)\n",
+    "len(intersc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(242,)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trade_countries.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(217,)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gdp_countries.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1604,7 +1668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1615,7 +1679,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "205"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(intersc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1625,63 +1709,30 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## First normalization approach "
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "date\n",
-       "1986    4.868583e+09\n",
-       "1987    4.955725e+09\n",
-       "1988    5.043787e+09\n",
-       "1989    5.131800e+09\n",
-       "1990    5.226826e+09\n",
-       "1991    5.314022e+09\n",
-       "1992    5.397543e+09\n",
-       "1993    5.481879e+09\n",
-       "1994    5.565290e+09\n",
-       "1995    5.649382e+09\n",
-       "1996    5.731387e+09\n",
-       "1997    5.813325e+09\n",
-       "1998    5.894510e+09\n",
-       "1999    5.974601e+09\n",
-       "2000    6.053912e+09\n",
-       "2001    6.132656e+09\n",
-       "2002    6.211198e+09\n",
-       "2003    6.289847e+09\n",
-       "2004    6.368985e+09\n",
-       "2005    6.448683e+09\n",
-       "2006    6.529143e+09\n",
-       "2007    6.610082e+09\n",
-       "2008    6.692278e+09\n",
-       "2009    6.774466e+09\n",
-       "2010    6.856268e+09\n",
-       "2011    6.936794e+09\n",
-       "2012    7.015915e+09\n",
-       "2013    7.099282e+09\n",
-       "2014    7.183392e+09\n",
-       "2015    7.267632e+09\n",
-       "2016    7.352473e+09\n",
-       "2017    7.436753e+09\n",
-       "Name: value, dtype: float64"
+       "(6560, 5)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "concurrent_pop_df.groupby('date')['value'].sum()"
+    "concurrent_pop_df.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## First normalization approach "
    ]
   },
   {
