added multivariate clustering notebook

--- a/Exploration_V2/Compute_Antifragility.ipynb
+++ b/Exploration_V2/Compute_Antifragility.ipynb
@@ -33,15 +33,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.style.use('dark_background')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [],
@@ -448,9 +439,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.5 64-bit ('toughenv': conda)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python37564bittoughenvconda10c22ec9b2ab438aab78bd3ff93ae9c0"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -462,7 +453,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
