--- a/Exploration_V2/clustering_TS/clustering_methods/Agglomerative.ipynb
+++ b/Exploration_V2/clustering_TS/clustering_methods/Agglomerative.ipynb
@@ -182,9 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -582,9 +580,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.5 64-bit ('toughenv': conda)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python37564bittoughenvconda10c22ec9b2ab438aab78bd3ff93ae9c0"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -596,7 +594,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
