added extra layer of exploration and preprocessing to make sure that there aren't bugs.

--- a/Exploration_V2/clustering_TS/Community-detection.ipynb
+++ b/Exploration_V2/clustering_TS/Community-detection.ipynb
@@ -1157,11 +1157,14 @@
    "outputs": [],
    "source": [
     "def max_xcorr(x,y):\n",
-    "    if np.isnan(x).sum() < len(x)-15 and np.isnan(y).sum() < len(y)-15:\n",
-    "        ii=np.flatnonzero(np.isfinite(np.c_[x,y]).all(1))\n",
-    "        return ccf(x[ii],y[ii],unbiased=False).max()\n",
-    "    else:\n",
-    "        return np.nan"
+    "    \n",
+    "    backwards = ccf(x[::-1], y[::-1], unbiased=False)[::-1]\n",
+    "    forwards = ccf(x, y, unbiased=False)\n",
+    "    ccf_output = np.r_[backwards[:-1], forwards]\n",
+    "\n",
+    "    maximum = abs(ccf_output).max()\n",
+    "    index=np.where(abs(ccf_output)==maximum)\n",
+    "    return ccf_output[index]"
    ]
   },
   {
