More comments in the notebook network_based_tsclust

--- a/Exploration_V3/network_based_tsclsut.ipynb
+++ b/Exploration_V3/network_based_tsclsut.ipynb
@@ -70,7 +70,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Clusters of antifragility time series (one series for each country from 1987 to 2017) were found considering euclidean distance as proximity measure (dissimilarity). An $\\epsilon$-NN network was constructed setting $\\epsilon = 2.8$ to connect pairs of nodes representing time series of antifragility with less than $\\epsilon$ euclidean distance. I ignored the null values at the moment of computing the distances. This decision was made in order to allow countries with less datapoints, which usually are the less developed, to be included in the analysis. Then I applied greedy_modularity and louvain community detection algorithms. 3 communities that minimize modularity were found by both algorithms. Averaging the antifragility time series of countries in each community, it can be seen that they represent antifragile, robust, and fragile groups of countries over time. I also calculated the adjusted rand index(ARI) and adjusted mutual information(AMI) to check the similarity between the communities found by each algorithm.\n",
+    "Clusters of antifragility time series (one series for each country from 1987 to 2017) were found considering euclidean distance as proximity measure (dissimilarity). An $\\epsilon$-NN network was constructed setting $\\epsilon = 2.8$ to connect pairs of nodes representing time series of antifragility with less than $\\epsilon$ euclidean distance. I ignored the null values at the moment of computing the distances. This decision was made in order to allow countries with fewer datapoints, which usually are less developed, to be included in the analysis. Then I applied greedy_modularity and louvain community detection algorithms. 3 communities that minimize modularity were found by both algorithms. Averaging the antifragility time series of countries in each community, it can be seen that they represent antifragile, robust, and fragile groups of countries over time. I also calculated the adjusted rand index(ARI) and adjusted mutual information(AMI) to check the similarity between the communities found by each algorithm.\n",
     "\n",
     "Below is a plot of the network, AMI and ARI estimations, and a general description of the groups found in terms of their antifragility values. Then, I show some plots that relate the groups of countries and other variables, specifically gdp, population, and sum of distances of exportations and importations."
    ]
@@ -387,7 +387,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, we plot group-averaged time series of gdp and pop, including confidence intervals for that estimate."
+    "Now, we plot group-averaged time series of GDP and pop, including confidence intervals for that estimate."
    ]
   },
   {
@@ -430,7 +430,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Same type of time series as above but considering sum of distances, which are computed between one country and each of the countries to/from which this country exported/imported food."
+    "The same type of time series as above are ploted below, but considering the sum of distances, which are computed between one country and each of the countries to/from which this country exported/imported food."
    ]
   },
   {
@@ -473,7 +473,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From the previous time series plots we can say that the group averaged sum of exportation/importation distances time series are statistically different from each other based on the confidence intervals over time. Thefore, considering countries belonging to group 1, which we could say they are fragile over time, their time series of average sum of distances of expertations and importations are consistently lower over time, compared to group 0, which are antifragile, and this group in turn is consistently lower over timee than group 2 of robust countries. The next part show the same type of group averages time series but considering sum of value (per 1000 US$) or sum of quantity (in tonnes) computed between one country and each of the countries to/from which this country exported/imported food."
+    "From the previous time series plots, we can say that the group averaged sum of exportation/importation distances time series are statistically different from each other based on the confidence intervals over time. Therefore, considering countries belonging to group 1, which we could say are fragile over time, their time series of average sum of distances of exportations and importations are consistently lower over time, compared to group 0, which are antifragile, and this group, in turn, is consistently lower over time than group 2 of robust countries. The next part shows the same type of group averages time series but considering the sum of value (per 1000 US$) or sum of quantity (in tonnes) computed between one country and each of the countries to/from which this country exported/imported food."
    ]
   },
   {
@@ -521,7 +521,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The rest of time series don't exhibit clear statistically differences. Nevertheless, one aspect that should be considered is that due to the different group sizes and unequal variances per year, the power of the test that the group averages are different is lower. Therefore, given that the averages are different is true, the probability to reject the null, i.e., that the averages are equal, is lower."
+    "The rest of time series don't exhibit clear statistical supported differences. Nevertheless, one aspect that should be considered is that due to the different group sizes and unequal variances per year, the power of the test that the group averages are different is lower. Therefore, given that the averages are different is true, the probability to reject the null, i.e., that the averages are equal, is lower. Thus, testing the group differenece of averages using, for example, one-way ANOVA, would have lower statistical sensitivity."
    ]
   },
   {
@@ -534,6 +534,13 @@
    "metadata": {},
    "source": [
     "![image.png](attachment:6ac4d098-6361-4a1b-932a-2986bcc058b3.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finally, using the same methodology of network construction and community discovery algorithms, I also constructed networks using correlation as proximity measure. At first, I used a time-lag variation of correlation (cross-correlation), nonetheless, the time-frequency of this data is yearly, hence, I considered that any possible lagged effects of one country over another could not be carried for more than 1 year. Furthermore, using simple correlation allowed the use of NaN-friendly methods such that all the countries were included. I decided not to apply it due to the small number of observations we have in our dataset (exactly 31) and the added complication of correcting for small sample sizes in the mutual information estimation."
    ]
   },
   {
