--- a/Exploration_V3/Tests.ipynb
+++ b/Exploration_V3/Tests.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The proportion of countries per community is  0:47.6%, 1:37.2%, and 2:15.2%. I'm not whether this may affect the results found or is not relevant. To make sure that the result is independent of the relative proportions of countries among the communities found, I believe that one valid option could be to randomly generate labels of three categorical classes to simulate the three communities found and assign a different probability of occurrence of the simulated labels among countries using the original proportion of countries per community. Here I performed this test and found that randomly assigning labels does not yield the same patterns found by using the community detection algorithms.  "
+    "The proportion of countries per community is  0:47.6%, 1:37.2%, and 2:15.2%. I wasn't sure whether this may affect the results found or is not relevant. To make sure that the result is independent of the relative proportions of countries among the communities found, I believe that one valid option could be to randomly generate labels of three categorical classes to simulate the three communities found and assign a different probability of occurrence of the simulated labels among countries using the original proportion of countries per community. Here I performed this test and found that randomly assigning labels does not yield the same patterns found by using the community detection algorithms.  "
    ]
   },
   {
